--- a/index.html
+++ b/index.html
@@ -4,47 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>For You 💖</title>
-
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-
-<style>
-* {margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-:root { --bg1:#000; --bg2:#1a0010; --accent:#ff9fc7; }
-body.rose { --bg1:#2b0014; --bg2:#7a0036; --accent:#ffd1dc; }
-
-body {
-  height:100vh;
-  overflow:hidden;
-  background:radial-gradient(circle at top,var(--bg2),var(--bg1));
-  color:white;
-  transition:background 0.8s ease;
-}
-
-/* Slide container */
-.slide {
-  position:absolute; top:0; left:0; width:100%; height:100%;
-  display:flex; align-items:cente…
-[12:08 PM, 2/3/2026] My Son: <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ultimate Valentine 💖</title>
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-<style>
-* {margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-:root { --bg1:#000; --bg2:#1a0010; --accent:#ff9fc7; }
-body.rose { --bg1:#2b0014; --bg2:#7a0036; --accent:#ffd1dc; }
-
-body { height:100vh; overflow:hidden; background:radial-gradient(circle at top,var(--bg2),var(--bg1)); color:white; transition:background 0.8s ease; }
-
-.slide { position:absolute; top:0; left:0; width:100%; height:100%; display:flex; align-items:center; justify-content:center; text-align:…
-[12:13 PM, 2/3/2026] My Son: <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ultimate Valentine 💖</title>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
@@ -138,7 +97,7 @@ button:hover::after{
 <div class="slide">
   <div class="card">
     <h1>👑 QUEEN OF MY WORLD 👑</h1>
-    <p>You’re adored, celebrated, and chosen. Forever loved.</p>
+    <p>You’re adored, celebrated, and chosen. Now and always.</p>
     <button id="btn-share">Share This Moment 📲</button>
     <div class="toggle" id="btn-toggle">Switch Mood 🌙</div>
   </div>
