--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <title>For You 💖</title>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 <style>
+/* Reset */
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
 :root{--bg1:#000;--bg2:#1a0010;--accent:#ff9fc7;}
 body.rose{--bg1:#2b0014;--bg2:#7a0036;--accent:#ffd1dc;}
 body{height:100vh;overflow:hidden;background:radial-gradient(circle at top,var(--bg2),var(--bg1));color:white;transition:background 0.8s ease;}
 
-/* Slides using display */
+/* Slides */
 .slide{position:absolute;top:0;left:0;width:100%;height:100%;display:none;align-items:center;justify-content:center;text-align:center;padding:30px;}
 .slide.active{display:flex;}
 
@@ -97,7 +98,7 @@ button:hover::after{
 <div class="slide">
   <div class="card">
     <h1>👑 QUEEN OF MY WORLD 👑</h1>
-    <p>You’re adored, celebrated, and chosen. Now and always.</p>
+    <p>You’re adored, celebrated, and chosen. Forever loved.</p>
     <button id="btn-share">Share This Moment 📲</button>
     <div class="toggle" id="btn-toggle">Switch Mood 🌙</div>
   </div>
@@ -106,79 +107,78 @@ button:hover::after{
 <script>
 document.addEventListener("DOMContentLoaded",function(){
 
-  let current=0;
-  const slides=document.querySelectorAll('.slide');
+let current=0;
+const slides=document.querySelectorAll('.slide');
 
-  function nextSlide(){
-    slides[current].classList.remove('active');
-    current++;
-    if(current<slides.length) slides[current].classList.add('active');
-  }
+function nextSlide(){
+  slides[current].classList.remove('active');
+  current++;
+  if(current<slides.length) slides[current].classList.add('active');
+}
 
-  function finale(){
-    nextSlide();
-    confetti({particleCount:400,spread:180,origin:{y:0.6},colors:['#ffd700','#ff4f9a','#ffb6c1']});
-    for(let i=0;i<60;i++) createHeart();
-  }
+function finale(){
+  nextSlide();
+  confetti({particleCount:400,spread:180,origin:{y:0.6},colors:['#ffd700','#ff4f9a','#ffb6c1']});
+  for(let i=0;i<60;i++) createHeart();
+}
 
-  function createHeart(){
-    const heart=document.createElement('div');
-    heart.className='heart';
-    heart.innerHTML='💖';
-    heart.style.left=Math.random()*100+'vw';
-    heart.style.animationDuration=(Math.random()*3+3)+'s';
-    heart.style.fontSize=(18+Math.random()*14)+'px';
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),6000);
-  }
-  setInterval(createHeart,800);
+function createHeart(){
+  const heart=document.createElement('div');
+  heart.className='heart';
+  heart.innerHTML='💖';
+  heart.style.left=Math.random()*100+'vw';
+  heart.style.animationDuration=(Math.random()*3+3)+'s';
+  heart.style.fontSize=(18+Math.random()*14)+'px';
+  document.body.appendChild(heart);
+  setTimeout(()=>heart.remove(),6000);
+}
+setInterval(createHeart,800);
 
-  /* Countdown */
-  const countdownEl=document.getElementById('countdown');
-  const valentines=new Date(new Date().getFullYear(),1,14).getTime();
-  setInterval(()=>{
-    const diff=valentines-Date.now();
-    const d=Math.floor(diff/86400000);
-    const h=Math.floor((diff/3600000)%24);
-    const m=Math.floor((diff/60000)%60);
-    countdownEl.textContent = ${d}d ${h}h ${m}m until Valentine’s 💘;
-  },1000);
+/* Countdown */
+const countdownEl=document.getElementById('countdown');
+const valentines=new Date(new Date().getFullYear(),1,14).getTime();
+setInterval(()=>{
+  const diff=valentines-Date.now();
+  const d=Math.floor(diff/86400000);
+  const h=Math.floor((diff/3600000)%24);
+  const m=Math.floor((diff/60000)%60);
+  countdownEl.textContent = ${d}d ${h}h ${m}m until Valentine’s 💘;
+},1000);
 
-  /* Buttons */
-  document.getElementById("btn-begin").addEventListener("click",nextSlide);
-  document.getElementById("btn-next1").addEventListener("click",nextSlide);
-  document.getElementById("btn-next2").addEventListener("click",nextSlide);
-  document.getElementById("btn-yes").addEventListener("click",finale);
-  document.getElementById("btn-absolutely").addEventListener("click",finale);
-  document.getElementById("btn-share").addEventListener("click",function(){
-    if(navigator.share){navigator.share({title:'Valentine 💖', text:'Someone made this just for me 👑✨', url:location.href});}
-    else{alert('Copy the link and share the love 💕');}
-  });
-  document.getElementById("btn-toggle").addEventListener("click",()=>document.body.classList.toggle('rose'));
+/* Buttons */
+document.getElementById("btn-begin").addEventListener("click",nextSlide);
+document.getElementById("btn-next1").addEventListener("click",nextSlide);
+document.getElementById("btn-next2").addEventListener("click",nextSlide);
+document.getElementById("btn-yes").addEventListener("click",finale);
+document.getElementById("btn-absolutely").addEventListener("click",finale);
+document.getElementById("btn-share").addEventListener("click",function(){
+  if(navigator.share){navigator.share({title:'Valentine 💖', text:'Someone made this just for me 👑✨', url:location.href});}
+  else{alert('Copy the link and share the love 💕');}
+});
+document.getElementById("btn-toggle").addEventListener("click",()=>document.body.classList.toggle('rose'));
 
-  /* Swipe support for touchscreens */
-  let startY=0;
-  document.addEventListener('touchstart',e=>startY=e.touches[0].clientY);
-  document.addEventListener('touchend',e=>{
-    if(startY-e.changedTouches[0].clientY>50 && current<slides.length-1) nextSlide();
-  });
+/* Swipe support */
+let startY=0;
+document.addEventListener('touchstart',e=>startY=e.touches[0].clientY);
+document.addEventListener('touchend',e=>{
+  if(startY-e.changedTouches[0].clientY>50 && current<slides.length-1) nextSlide();
+});
 
-  /* Glitter trail */
-  function sparkle(e){
-    const glitter=document.createElement('div');
-    glitter.className='glitter';
-    glitter.style.left=e.clientX+'px';
-    glitter.style.top=e.clientY+'px';
-    glitter.style.width=(5+Math.random()*10)+'px';
-    glitter.style.height=(5+Math.random()*10)+'px';
-    document.body.appendChild(glitter);
-    setTimeout(()=>glitter.remove(),1200);
-  }
-  document.addEventListener('mousemove',sparkle);
-  document.addEventListener('touchmove',e=>sparkle(e.touches[0]));
+/* Glitter trail */
+function sparkle(e){
+  const glitter=document.createElement('div');
+  glitter.className='glitter';
+  glitter.style.left=e.clientX+'px';
+  glitter.style.top=e.clientY+'px';
+  glitter.style.width=(5+Math.random()*10)+'px';
+  glitter.style.height=(5+Math.random()*10)+'px';
+  document.body.appendChild(glitter);
+  setTimeout(()=>glitter.remove(),1200);
+}
+document.addEventListener('mousemove',sparkle);
+document.addEventListener('touchmove',e=>sparkle(e.touches[0]));
 
 });
 </script>
-
 </body>
 </html>
