--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ body{
   overflow:hidden;
   background:radial-gradient(circle at top,var(--bg2),var(--bg1));
   color:white;
-  transition:background 0.8s ease;
 }
 
 /* Slides */
@@ -47,12 +46,6 @@ h1{
   background:linear-gradient(45deg,#ffd700,#ff9fc7);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  animation:glow 2.5s ease-in-out infinite alternate;
-}
-
-@keyframes glow{
-  0%{text-shadow:0 0 8px #ffd700;}
-  100%{text-shadow:0 0 24px #ff9fc7;}
 }
 
 p{font-size:1.15rem;opacity:0.9;margin-bottom:22px;}
@@ -65,20 +58,53 @@ button{
   border-radius:50px;
   font-size:1rem;
   cursor:pointer;
-  box-shadow:0 18px 45px rgba(255,215,0,0.45);
-  transition:transform 0.2s ease, box-shadow 0.2s ease;
-  position:relative;
 }
 
-button:hover{
-  transform:scale(1.08);
-  box-shadow:0 20px 60px rgba(255,215,0,0.55);
-}
-
-button::after{
-  content:'';
+/* Hearts */
+.heart{
   position:absolute;
-  inset:-6px;
-  border-radius:50px;
-  box-shadow:0 0 20px rgba(255,215,0,0.6),0 0 40px rgba(255,159,199,0.4);
-  opacity
+  bottom:-40px;
+  font-size:22px;
+  animation:rise linear infinite;
+  opacity:0.85;
+  z-index:1;
+  pointer-events:none; /* ✅ FIX */
+}
+
+@keyframes rise{
+  0%{transform:translateY(0);opacity:0}
+  15%{opacity:1}
+  100%{transform:translateY(-120vh);opacity:0;}
+}
+
+/* Glitter */
+.glitter{
+  position:fixed;
+  border-radius:50%;
+  pointer-events:none; /* ✅ FIX */
+  background:radial-gradient(circle,#ffd700,rgba(255,215,0,0.05));
+  animation:sparkle 1.2s linear forwards;
+  z-index:1;
+}
+
+@keyframes sparkle{
+  0%{transform:scale(1);opacity:1}
+  100%{transform:scale(0);opacity:0}
+}
+</style>
+</head>
+
+<body>
+
+<div class="slide active">
+  <div class="card">
+    <h1>MiMi 💖</h1>
+    <p>A little something for the prettiest girl ✨</p>
+    <button id="btn-begin">Begin 💫</button>
+  </div>
+</div>
+
+<div class="slide">
+  <div class="card">
+    <h1>Main Character Energy</h1>
+    <p>You do
