--- a/index.html
+++ b/index.html
@@ -3,43 +3,145 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Test</title>
+<title>For You 💖</title>
+
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+
 <style>
-body{margin:0;font-family:sans-serif;background:#111;color:white}
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:#0b0010;
+  color:white;
+  overflow:hidden;
+}
+
+/* Slides */
 .slide{
   position:absolute;
   inset:0;
   display:none;
   align-items:center;
   justify-content:center;
+  text-align:center;
 }
 .slide.active{display:flex}
-button{padding:20px 40px;font-size:18px;cursor:pointer}
+
+.card{
+  background:rgba(255,255,255,0.08);
+  backdrop-filter:blur(20px);
+  padding:40px 30px;
+  border-radius:30px;
+  width:90%;
+  max-width:420px;
+}
+
+h1{margin-bottom:15px}
+p{margin-bottom:20px}
+
+button{
+  padding:15px 35px;
+  font-size:16px;
+  border:none;
+  border-radius:40px;
+  cursor:pointer;
+  background:linear-gradient(45deg,#ffd700,#ff4f9a);
+  color:white;
+}
+
+/* FX (visual only) */
+#fx{
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+}
+.heart{
+  position:absolute;
+  bottom:-40px;
+  animation:rise linear forwards;
+  font-size:22px;
+}
+@keyframes rise{
+  from{transform:translateY(0);opacity:0}
+  to{transform:translateY(-120vh);opacity:1}
+}
 </style>
 </head>
 
 <body>
 
+<div id="fx"></div>
+
 <div class="slide active">
-  <button id="begin">BEGIN</button>
+  <div class="card">
+    <h1>MiMi 💖</h1>
+    <p>A little something for the prettiest girl ✨</p>
+    <button id="begin">Begin 💫</button>
+  </div>
 </div>
 
 <div class="slide">
-  <h1>IT WORKED</h1>
+  <div class="card">
+    <h1>Main Character Energy</h1>
+    <p>You don’t try — you just shine 💎</p>
+    <button id="next1">Next 😌</button>
+  </div>
+</div>
+
+<div class="slide">
+  <div class="card">
+    <h1>So… 💘</h1>
+    <p>Will you be my Valentine?</p>
+    <button id="final">YES 💖</button>
+  </div>
+</div>
+
+<div class="slide">
+  <div class="card">
+    <h1>👑 QUEEN OF MY WORLD 👑</h1>
+    <p>You’re adored. Chosen. Always.</p>
+  </div>
 </div>
 
 <script>
 console.log("Script loaded");
 
 const slides = document.querySelectorAll(".slide");
-let i = 0;
+let current = 0;
+
+function show(i){
+  slides[current].classList.remove("active");
+  current = i;
+  slides[current].classList.add("active");
+}
 
 document.getElementById("begin").addEventListener("click", () => {
-  console.log("Button clicked");
-  slides[i].classList.remove("active");
-  i++;
-  slides[i].classList.add("active");
+  console.log("Begin clicked");
+  show(1);
 });
+
+document.getElementById("next1").addEventListener("click", () => {
+  console.log("Next clicked");
+  show(2);
+});
+
+document.getElementById("final").addEventListener("click", () => {
+  console.log("Final clicked");
+  show(3);
+  confetti({particleCount:250,spread:160});
+});
+
+/* Hearts (safe layer) */
+const fx = document.getElementById("fx");
+setInterval(()=>{
+  const h=document.createElement("div");
+  h.className="heart";
+  h.textContent="💖";
+  h.style.left=Math.random()*100+"vw";
+  h.style.animationDuration=4+Math.random()*2+"s";
+  fx.appendChild(h);
+  setTimeout(()=>h.remove(),6000);
+},900);
 </script>
 
 </body>
