--- a/index.html
+++ b/index.html
@@ -3,246 +3,198 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Valentine 💖</title>
+<title>For You 💖</title>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 <style>
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', sans-serif;
-}
+* { margin:0; padding:0; box-sizing:border-box; font-family:Arial, sans-serif; }
 
 body {
-  background: radial-gradient(circle at top, #3a001a, #000);
+  background: radial-gradient(circle at top, #1a0010, #000);
+  color: white;
   height: 100vh;
   overflow: hidden;
-  color: white;
 }
 
-/* SLIDES */
+/* Slides */
 .slide {
   display: none;
   height: 100vh;
   width: 100%;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
+  text-align: center;
+  padding: 30px;
 }
 
 .slide.active {
   display: flex;
 }
 
-/* CARD */
+/* Card */
 .card {
-  background: rgba(255,255,255,0.12);
-  backdrop-filter: blur(12px);
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(20px);
   border-radius: 30px;
-  padding: 50px;
+  padding: 45px 35px;
   max-width: 420px;
-  width: 90%;
-  text-align: center;
-  box-shadow: 0 0 40px rgba(255,215,0,0.2);
-}
-
-h1 {
-  color: gold;
-  margin-bottom: 15px;
-}
-
-p {
-  margin-bottom: 25px;
-  font-size: 18px;
-}
-
-/* BUTTONS */
-button {
-  padding: 14px 32px;
-  border-radius: 40px;
-  border: none;
-  background: linear-gradient(45deg, gold, hotpink);
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  position: relative;
-}
-
-button:hover {
-  transform: scale(1.05);
-}
-
-/* GLOW */
-button::after {
-  content: '';
-  position: absolute;
-  inset: -8px;
-  border-radius: 50px;
-  box-shadow: 0 0 25px gold, 0 0 50px hotpink;
-  opacity: 0;
-  transition: opacity .3s;
-}
-
-button:hover::after {
-  opacity: 1;
-}
-
-/* HEARTS */
-.heart {
-  position: fixed;
-  bottom: -30px;
-  font-size: 22px;
-  animation: float 6s linear forwards;
-  pointer-events: none;
+  width: 100%;
+  box-shadow: 0 30px 80px rgba(255,215,0,0.25);
+  animation: float 4s ease-in-out infinite;
 }
 
 @keyframes float {
-  0% { transform: translateY(0); opacity: 0 }
-  20% { opacity: 1 }
-  100% { transform: translateY(-120vh); opacity: 0 }
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-12px); }
 }
 
-/* GLITTER */
-.glitter {
-  position: fixed;
-  width: 8px;
-  height: 8px;
-  background: gold;
-  border-radius: 50%;
-  pointer-events: none;
-  opacity: .8;
+h1 {
+  font-size: 2.2rem;
+  margin-bottom: 15px;
+  background: linear-gradient(45deg,#ffd700,#ff9fc7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-/* COUNTDOWN */
-.countdown {
-  font-size: 20px;
-  margin-bottom: 20px;
+p {
+  font-size: 1.1rem;
+  margin-bottom: 25px;
+  opacity: 0.9;
+}
+
+button {
+  padding: 15px 36px;
+  border-radius: 50px;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: white;
+  background: linear-gradient(45deg,#ffd700,#ff4f9a);
+  box-shadow: 0 15px 40px rgba(255,215,0,0.4);
+  transition: transform 0.2s ease;
+}
+
+button:hover {
+  transform: scale(1.08);
+}
+
+.btn-group {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* Hearts */
+.heart {
+  position: absolute;
+  bottom: -40px;
+  font-size: 22px;
+  animation: rise linear infinite;
+}
+
+@keyframes rise {
+  0% { transform: translateY(0); opacity:0; }
+  20% { opacity:1; }
+  100% { transform: translateY(-120vh); opacity:0; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- SLIDES -->
 <div class="slide active">
   <div class="card">
-    <h1>MiMi 💖</h1>
-    <p>This is made just for you</p>
-    <button id="begin">Begin</button>
+    <h1>Hey You 💖</h1>
+    <p>I made something just for you</p>
+    <button onclick="nextSlide()">Begin ✨</button>
   </div>
 </div>
 
 <div class="slide">
   <div class="card">
-    <h1>Main Character ✨</h1>
-    <p>You don’t compete. You dominate.</p>
-    <button class="next">Next</button>
+    <h1>Main Character</h1>
+    <p>You don’t try — you just are.</p>
+    <button onclick="nextSlide()">Next 💫</button>
   </div>
 </div>
 
 <div class="slide">
   <div class="card">
-    <h1>Valentine Countdown 💕</h1>
-    <div id="countdown" class="countdown"></div>
-    <button class="next">Next</button>
+    <h1>Be Honest…</h1>
+    <p>You felt this coming 😌</p>
+    <button onclick="nextSlide()">Tell Me 💘</button>
   </div>
 </div>
 
 <div class="slide">
   <div class="card">
-    <h1>One Question 💘</h1>
+    <h1>So…</h1>
     <p>Will you be my Valentine?</p>
-    <button id="yes">YES 💖</button>
+    <div class="btn-group">
+      <button onclick="finale()">YES 💖</button>
+      <button onclick="finale()">Obviously 😍</button>
+    </div>
   </div>
 </div>
 
 <div class="slide">
   <div class="card">
     <h1>👑 Chosen 👑</h1>
-    <p>You’re always on top of the world.</p>
-    <button id="share">Share</button>
+    <p>You’re special. And you always were.</p>
+    <button onclick="share()">Share This 💌</button>
   </div>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+let current = 0;
+const slides = document.querySelectorAll('.slide');
 
-  const slides = document.querySelectorAll(".slide");
-  let index = 0;
-
-  function show(i) {
-    slides.forEach(s => s.classList.remove("active"));
-    slides[i].classList.add("active");
+function nextSlide() {
+  slides[current].classList.remove('active');
+  current++;
+  if (current < slides.length) {
+    slides[current].classList.add('active');
   }
+}
 
-  document.getElementById("begin").onclick = () => {
-    index = 1;
-    show(index);
-  };
-
-  document.querySelectorAll(".next").forEach(btn => {
-    btn.onclick = () => {
-      index++;
-      show(index);
-    };
+function finale() {
+  nextSlide();
+  confetti({
+    particleCount: 300,
+    spread: 160,
+    origin: { y: 0.6 }
   });
+  for (let i = 0; i < 40; i++) createHeart();
+}
 
-  document.getElementById("yes").onclick = () => {
-    index++;
-    show(index);
-    confetti({ particleCount: 350, spread: 160 });
-  };
+function createHeart() {
+  const h = document.createElement('div');
+  h.className = 'heart';
+  h.textContent = '💖';
+  h.style.left = Math.random() * 100 + 'vw';
+  h.style.animationDuration = (3 + Math.random() * 3) + 's';
+  document.body.appendChild(h);
+  setTimeout(() => h.remove(), 6000);
+}
 
-  document.getElementById("share").onclick = () => {
-    if (navigator.share) {
-      navigator.share({
-        title: "Valentine 💖",
-        text: "Someone made this for me",
-        url: location.href
-      });
-    } else {
-      alert("Copy the link and share 💕");
-    }
-  };
-
-  /* COUNTDOWN */
-  const cd = document.getElementById("countdown");
-  const target = new Date(new Date().getFullYear(), 1, 14).getTime();
-
-  setInterval(() => {
-    const diff = target - Date.now();
-    const d = Math.floor(diff / 86400000);
-    const h = Math.floor(diff % 86400000 / 3600000);
-    const m = Math.floor(diff % 3600000 / 60000);
-    cd.textContent = d + "d " + h + "h " + m + "m";
-  }, 1000);
-
-  /* HEARTS */
-  setInterval(() => {
-    const h = document.createElement("div");
-    h.className = "heart";
-    h.textContent = "💖";
-    h.style.left = Math.random() * 100 + "vw";
-    document.body.appendChild(h);
-    setTimeout(() => h.remove(), 6000);
-  }, 700);
-
-  /* GLITTER */
-  document.addEventListener("mousemove", e => {
-    const g = document.createElement("div");
-    g.className = "glitter";
-    g.style.left = e.clientX + "px";
-    g.style.top = e.clientY + "px";
-    document.body.appendChild(g);
-    setTimeout(() => g.remove(), 250);
-  });
-
-});
+function share() {
+  if (navigator.share) {
+    navigator.share({
+      title: 'Valentine 💖',
+      text: 'Someone made this just for me ✨',
+      url: location.href
+    });
+  } else {
+    alert('Copy the link and share it 💕');
+  }
+}
 </script>
 
 </body>
 </html>
+
+
+<div class="slide">
+  <div class="card">
